--- a/Backend/TrackerAPI/Jenkinsfile
+++ b/Backend/TrackerAPI/Jenkinsfile
@@ -9,11 +9,10 @@ pipeline {
         registryCredentialsId 'Dockerhub'
     }
 }
-    stages {
-        stage('push after build') {
-            steps {
-             sh 'docker push technasia/securecane:TrackerAPI'
-            }
+
+    stage('push after build') {
+        steps {
+        sh '/usr/bin/docker push technasia/securecane:TrackerAPI'
         }
-    }
+        }
 }
