--- a/Backend/TrackerAPI/Jenkinsfile
+++ b/Backend/TrackerAPI/Jenkinsfile
@@ -9,11 +9,19 @@ pipeline {
         registryCredentialsId 'Dockerhub'
     }
 }
-    stages {
+     stages {
         stage('push after build') {
+            agent
             steps {
                 sh 'docker push technasia/securecane'
             }
         }
     }
-}
+      stage('Push image') {
+        docker.withRegistry('https://index.docker.io/v1/', 'Dockerhub') {  
+        app.push("${env.BUILD_NUMBER}")            
+        app.push("latest")        
+              }    
+           }
+        }
+//}
