--- a/Backend/TrackerAPI/Jenkinsfile
+++ b/Backend/TrackerAPI/Jenkinsfile
@@ -9,14 +9,15 @@ pipeline {
         registryCredentialsId 'Dockerhub'
     }
 }
-     stages {
-        stage('push after build') {
-            agent
-            steps {
-                sh 'docker push technasia/securecane'
-            }
-        }
-    }
+     //stages {
+        //stage('push after build') {
+            //agent
+            //steps {
+                //sh 'docker push technasia/securecane'
+            //}
+        //}
+    //}
+     stages {    
       stage('Push image') {
         docker.withRegistry('https://index.docker.io/v1/', 'Dockerhub') {  
         app.push("${env.BUILD_NUMBER}")            
@@ -24,4 +25,4 @@ pipeline {
               }    
            }
         }
-//}
+}
