--- a/Backend/TrackerAPI/Jenkinsfile
+++ b/Backend/TrackerAPI/Jenkinsfile
@@ -9,8 +9,9 @@ pipeline {
         registryCredentialsId 'Dockerhub'
     }
 }
-     stages {
+     //stages {
         stage('push after build') {
+            agent any
             steps {
                script { 
                 docker.withRegistry('https://index.docker.io/v1/', 'Dockerhub') {
@@ -21,4 +22,4 @@ pipeline {
     }
 }   
 }
-}
+//}
