--- a/Backend/TrackerAPI/Jenkinsfile
+++ b/Backend/TrackerAPI/Jenkinsfile
@@ -1,17 +1,16 @@
 pipeline {
      //agent { dockerfile { dir './Backend/TrackerAPI' } }
      agent {
-    dockerfile {
+    docker {
         filename 'Dockerfile'
         dir './Backend/TrackerAPI'
         //label 'my-defined-label'
-        registryUrl 'https://index.docker.io/v1/'
-        registryCredentialsId 'Dockerhub'
+        //registryUrl 'https://index.docker.io/v1/'
+        //registryCredentialsId 'Dockerhub'
     }
 }
      stages {
         stage('push after build') {
-            agent any
             steps {
                script { 
                 docker.withRegistry('https://index.docker.io/v1/', 'Dockerhub') {
