--- a/Backend/TrackerAPI/Jenkinsfile
+++ b/Backend/TrackerAPI/Jenkinsfile
@@ -1,24 +1,39 @@
-pipeline {
-     //agent { dockerfile { dir './Backend/TrackerAPI' } }
-     agent {
-    docker {
-        filename 'Dockerfile'
-        dir './Backend/TrackerAPI'
-        //label 'my-defined-label'
-        //registryUrl 'https://index.docker.io/v1/'
-        //registryCredentialsId 'Dockerhub'
-    }
-}
-     stages {
-        stage('push after build') {
-            steps {
-               script { 
-                docker.withRegistry('https://index.docker.io/v1/', 'Dockerhub') {
-                    app.push("${env.BUILD_NUMBER}")
-                    app.push("latest")
-            }
-        }
-    }
-}   
-}
+pipeline{
+
+	agent any
+
+	environment {
+		DOCKERHUB_CREDENTIALS=credentials('Dockerhub')
+	}
+
+	stages {
+
+		stage('Build') {
+
+			steps {
+				sh 'docker build -t technasia/securecane:latest .'
+			}
+		}
+
+		stage('Login') {
+
+			steps {
+				sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
+			}
+		}
+
+		stage('Push') {
+
+			steps {
+				sh 'docker push technasia/securecane:latest'
+			}
+		}
+	}
+
+	post {
+		always {
+			sh 'docker logout'
+		}
+	}
+
 }
