--- a/Backend/TrackerAPI/Jenkinsfile
+++ b/Backend/TrackerAPI/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline{
 		stage('Build') {
 
 			steps {
-				sh 'docker build -t technasia/securecane:latest .'
+				sh 'docker build -t technasia/securecane:latest ./Dockerfile'
 			}
 		}
 
