--- a/Backend/TrackerAPI/Dockerfile
+++ b/Backend/TrackerAPI/Dockerfile
@@ -6,14 +6,14 @@ WORKDIR /usr/src/app
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY ["Backend/TrackerAPI/package*.json", "./"]
+COPY ["./package*.json", "./"]
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
 
 # Bundle app source
-COPY ["Backend/TrackerAPI/", "."]
+COPY ["./", "."]
 
 EXPOSE 4000
 CMD [ "node", "server.js" ]
